--- a/talvaren-vault.html
+++ b/talvaren-vault.html
@@ -444,7 +444,367 @@ Status Summary
 <!-- ===================== -->
 <section id="tables-temp">
   <h2>Tables — Temp</h2>
-  <p></p>
+  TALVAREN — TABLE STAGING
+
+(STRUCTURED DATA — NON-AUTHORITATIVE, UNSORTED)
+
+Table Rules (LOCKED)
+	•	Tables are not final
+	•	No module references this file
+	•	No balance assumptions implied
+	•	Sorting, reconciliation, and activation occur later
+
+⸻
+
+ABILITY STRUCTURE & TIMING TABLES
+
+TABLE-Class-Ability-Structure-001
+
+(Structural — not balance)
+	•	Total abilities per class: 40
+	•	Standard rotation abilities per class: 4
+	•	Montage abilities per class: 6
+	•	Epic abilities by level 9: 3
+	•	Ultra abilities by level 10: 1
+
+⸻
+
+TABLE-Ability-Level-Milestones-001
+	•	Starting abilities at level 1: 3
+	•	Abilities by level 10: 12
+	•	Additional ability grant levels:
+	•	11
+	•	21
+	•	31
+	•	41
+	•	51
+	•	61
+	•	Abilities per milestone: 2
+
+⸻
+
+TABLE-Ability-Cooldowns-001
+
+(Append-only — reaffirmed)
+	•	Epic ability cooldown: 1 hour
+	•	Ultra ability cooldown: 3 hours
+
+⸻
+
+TABLE-Ability-Training-001
+	•	Montage training duration: 5–10 minutes
+	•	Trainer required: Yes
+	•	Interruptible: No (implied by design intent)
+
+⸻
+
+GLOBAL TIME & TRAVEL TABLES
+	•	Global travel cycle: 3 real hours
+	•	NPC travel routes: 3-hour global cycle
+	•	Caravan rhythm: 3 real hours
+	•	Expeditions:
+	•	Interval: 3 real hours
+	•	Duration: 3 real hours (1 in-game day)
+	•	Vast Below lift system:
+	•	Staggered
+	•	Total VB travel ≈ 9 real hours
+	•	Moving zones shift every 8 real days
+
+⸻
+
+INVENTORY & CARRY TABLES
+	•	Backpack slots: 20
+	•	Secondary pack slots: 20
+	•	Pouch slots: 10
+	•	Laborer Tater Sack: 50 slots
+
+Strength Effects
+	•	+5 lbs carry per STR
+	•	−0.4% stamina drain per STR
+	•	+0.5% melee damage per STR
+	•	Laborers receive 2× carry and stamina benefits
+
+⸻
+
+PROFESSIONS & CRAFTING TABLES
+	•	Recipes per crafting profession: 30–50
+	•	Recipe tiers: T1–T5
+	•	Group XP bonus: +5% per professional, max +30%
+	•	Epic profession ability cooldown: 1 hour
+	•	Ultra profession ability cooldown: 3 hours
+	•	Skill-based crafting: Uncapped
+	•	Consumable durations:
+	•	Standard: 28 minutes
+	•	Cooked: 30 minutes
+
+⸻
+
+RESOURCES & REGEN TABLES
+	•	Reserve bar size: 33%
+	•	Safe zone regeneration: 3 points per second per resource
+	•	Scroll mana cost: 3× base spell cost
+	•	Scroll global cooldown: 30 seconds
+	•	Scroll/Writ shared global cooldown: 30 seconds
+
+Requisition Mana Writ
+	•	Duration: 45 seconds
+	•	Maximum mana multiplier: 2×
+
+⸻
+
+SCROLLS & WRITS TABLES
+	•	Max scrolls per type: 5
+	•	Required Scribe level: Spell level +1
+
+Writ Availability
+	•	Faction Appeal Writ: Player level 10
+	•	Caravan Transit Requisition Writ: Player level 1
+	•	Requisition Mana Writ: Player level 25
+
+⸻
+
+SPELL BASE COST TABLE
+
+(Base values — no scaling implied)
+	•	Arcane Bolt — L1 / 12
+	•	Magic Missile — L1 / 14
+	•	Rejuvenation — L6 / 18
+	•	Fear — L8 / 20
+	•	Entangling Roots — L8 / 20
+	•	Cleanse — L8 / 16
+	•	Knock — L10 / 26
+	•	Levitate — L10 / 18
+	•	Water Breathing — L10 / 18
+	•	Drain Life — L10 / 28
+	•	Fireball — L12 / 32
+	•	Dispel Magic — L12 / 22
+	•	Blink — L14 / 22
+	•	Bone Shield — L14 / 30
+	•	Invisibility — L16 / 34
+	•	Frost Nova — L16 / 28
+	•	Cyclone Gust — L16 / 34
+	•	Mass Slow — L18 / 36
+	•	Chain Lightning — L18 / 38
+	•	Greater Heal — L20 / 40
+	•	Divine Barrier — L22 / 36
+
+⸻
+
+HIGH-TIER SCROLL LEVEL GATES
+	•	Level 40
+	•	Prismatic Burst
+	•	Guardian Ascension
+	•	Wrath of the Wild
+	•	Black Harvest
+	•	Level 50
+	•	Time Stop (Minor)
+	•	Divine Reckoning
+	•	Verdant Rebirth
+	•	Army of Bone
+
+⸻
+
+MOBS & ENCOUNTERS TABLES
+	•	Lieutenant respawn: 6–12 real hours
+	•	Boss respawn: 12–24 real hours
+	•	Apex respawn: 24–48 real hours
+	•	Apex mobs per biome: 1
+
+Encounter Targets
+	•	1–2 players vs Lieutenant: Viable
+	•	6 players vs Level 60 Apex: 3–4 minutes
+	•	Non-apex bosses: 6–8 minutes
+
+⸻
+
+LOOT & CONTAINER TABLES
+
+Fauna Meat Drops
+	•	T1: always T1
+	•	T2: always T1, common T2
+	•	T3: guaranteed T1, common T2, uncommon T3
+	•	T4: guaranteed T2, common T3, uncommon T4
+	•	T5: guaranteed T3, common T4, uncommon T5
+	•	Rolls per kill: 1–3
+
+Containers
+	•	Reset: 1 in-game day (3 real hours)
+	•	Loot roll: d300
+	•	Normal loot: 2–120
+	•	Elevated reward: Natural 1
+
+Chest Quality
+	•	1–2 → Tier 1
+	•	3–4 → Tier 2
+	•	5–6 → Tier 3
+	•	7–8 → Tier 4
+	•	9–10 → Tier 5
+
+Chest Outcome
+	•	1–40 → Loot
+	•	41–100 → Empty
+
+Chest Trap Types
+	•	Impact: 1–6
+	•	Reflex: 7–12
+	•	Arcane: 13–18
+	•	Toxin: 19–24
+	•	Mind: 25–30
+	•	No trap: 31–40
+
+⸻
+
+IDENTIFICATION TABLES
+	•	Minimum unidentified items per session: 4
+	•	Items consumed per session: 1
+
+Identification Window
+	•	Minimum slots per player: 50
+	•	Maximum players: 6
+	•	Maximum window slots: 300
+	•	Jeweler identify cooldown: 1 hour
+	•	Jeweler post-group lockout: 30 minutes
+
+⸻
+
+STATS & COMBAT TABLES
+	•	STR:
+	•	+2 kg carry per point
+	•	+10 stamina per point
+	•	Physical damage bonus begins at STR 9
+	•	CON: +1 HP per point above 8 (retroactive)
+	•	DEX: strike chance, mitigation, off-hand speed, fumble %
+	•	INT: language unlock thresholds, scroll tier access
+	•	WIS: +15 mana per point starting at 9
+	•	ART: stamina efficiency, crafting material retention, +15 stamina per point
+
+⸻
+
+STAMINA MULTIPLIERS
+
+Weapons
+	•	Light: 0.8
+	•	Medium: 1.0
+	•	Heavy: 1.3
+
+Armor
+	•	Light: 1.0
+	•	Medium: 1.1
+	•	Heavy: 1.2
+
+⸻
+
+AUTO-ATTACK SWING TIMES
+	•	Light: 1.2 s
+	•	Medium: 1.6 s
+	•	Heavy: 2.2 s
+
+⸻
+
+EQUIPMENT WEIGHTS
+
+Weapons
+	•	Light: 1–4 kg
+	•	Medium: 5–10 kg
+	•	Neutral buffer: 11 kg
+	•	Heavy: 12–26 kg
+
+Armor (Total)
+	•	Light: 8–14 kg
+	•	Medium: 15–24 kg
+	•	Heavy: 25–40 kg
+
+Armor Pieces
+	•	Helm: 0.5–3 kg
+	•	Shoulders/Back: 1–3 kg
+	•	Chest: 3–14 kg
+	•	Arms: 1–3 kg
+	•	Legs: 2–8 kg
+	•	Boots: 1–4 kg
+	•	Cape/Backpiece: 1–3 kg
+
+⸻
+
+MOUNTS TABLES
+	•	Global tame cooldown: 3 minutes
+
+Mount Levels
+	•	Horse 10
+	•	Camel 14
+	•	Bear 20
+	•	Dire Wolf 24
+	•	Giant Boar 28
+	•	Giant Infant Spider 32
+	•	Giant Snake 35
+	•	Caravan Ox 40
+	•	Runic Turtle 48
+	•	War Elephant 55
+	•	Mimic 60
+
+Taming Ingredients
+	•	Horse: apples ×3, salt ×1
+	•	Camel: dried vegetables ×2, water flask ×1
+	•	Bear: raw honey ×1, raw fish ×1
+	•	Dire Wolf: fresh red meat ×2, scent gland ×1
+	•	Giant Boar: wild roots ×2, exotic fruit ×1
+	•	Giant Infant Spider: fresh bait ×2, silk strands ×1
+	•	Giant Snake: warm-blooded prey meat ×1, scent gland ×1
+
+⸻
+
+ECONOMY TABLES
+
+Currency Conversion
+	•	100 silver = 1 gold
+	•	100 gold = 1 powdered crystal
+
+Shop Revenue Split
+	•	Player: 10%
+	•	World economy engine: 90%
+
+Economy Baseline (per session)
+	•	Session length: 3 real hours
+	•	Encounters: ~120
+	•	Spike drops: 1–2
+	•	Spend intent: ~80%
+	•	Sink split:
+	•	65% consumables
+	•	35% repairs
+
+Tier Value Targets
+	•	T1: 150s earned / 120s spent
+	•	T2: 450s / 360s
+	•	T3: 1350s / 1080s
+	•	T4: 4050s / 3240s
+	•	T5: 12150s / 9720s
+
+⸻
+
+WORLD & ENVIRONMENT TABLES
+	•	Desert sandstorms: vision reduction
+	•	Storm biome: constant rain, no scroll use
+	•	Polar tundra: −5% HP/sec without warmth
+	•	Campfires negate polar damage
+	•	Campfire comfort radius: 20 m
+	•	Zone cluster level span: 20–25 levels
+	•	Guild map study time: 10 cumulative minutes
+
+⸻
+
+CONTROL & BUFF TABLES
+	•	Hard CC duration: 22 seconds
+	•	Soft CC duration: 12 seconds
+	•	CC immunity window: 4 seconds
+
+Buff Strengths
+	•	Weak: +15%
+	•	Strong: +45%
+
+Sprint
+	•	Movement bonus: +30%
+	•	Cooldown: 15 seconds
+	•	Average duration: ~20 seconds
+
 </section>
 
 <section id="registries-temp">
