--- a/talvaren-vault.html
+++ b/talvaren-vault.html
@@ -436,7 +436,81 @@ Status Summary
 
 <section id="module-14">
   <h2>Module 14 — Governance, Enforcement & Appeals</h2>
-  <p></p>
+  MODULE 14 — Governance, Enforcement & Appeals
+
+Purpose
+
+Define the world’s governance logic, enforcement boundaries, and appeal mechanisms.
+This module governs process, not forgiveness.
+
+⸻
+
+1. Appeals System (World Process)
+	•	Appeals exist as a formal world process
+	•	Appeals are Scribe-gated
+	•	Appeals require:
+	•	A formal letter or document
+	•	Caravan delivery
+	•	Restitution tasks requiring real time
+	•	There is no grind-based reputation repair
+
+Rules
+	•	Each offense requires a new appeal
+	•	Appeals cannot be:
+	•	Stacked
+	•	Accelerated
+	•	Batched
+
+⸻
+
+2. Reputation Repair Constraints
+	•	Reputation repair:
+	•	Is never passive
+	•	Is never grind-based
+	•	Requires deliberate, formal action
+	•	Time and effort are intentional friction
+
+⸻
+
+3. Deep Delver Governance
+
+3.1 Oath Authority
+	•	Deep Delvers operate under a binding oath to Vallinoraxistup
+	•	Governance is enforced by oath, not policy
+
+3.2 Oath Violation Consequences
+	•	Violation of oath results in:
+	•	Annihilation
+	•	No appeal
+	•	No mitigation
+	•	No review
+
+⸻
+
+4. Non-Appealable Offenses
+
+No appeals exist for:
+	•	True Unique theft
+	•	Oath violation
+	•	Hoard crimes
+
+These outcomes are absolute.
+
+⸻
+
+5. Governance Philosophy (Explicit)
+	•	Governance is absolute
+	•	Forgiveness is not a system
+	•	Mercy, if it exists, is narrative — not mechanical
+
+⸻
+
+Status
+	•	Authoritative
+	•	Player-facing where applicable
+	•	System-enforced
+	•	No exceptions implied
+
 </section>
 
 <!-- ===================== -->
