--- a/talvaren-vault.html
+++ b/talvaren-vault.html
@@ -431,7 +431,124 @@ Status Summary
 
 <section id="module-13">
   <h2>Module 13 — Materials, Resources & Reagents</h2>
-  <p></p>
+  MODULE 13 — Materials, Resources & Reagents
+
+Purpose
+
+Establish a single authoritative registry for all materials, resources, and reagents used in crafting and profession systems across Talvaren.
+
+If an ingredient appears in multiple systems, Module 13 is the source of truth.
+
+⸻
+
+1. Registry Authority Rules (LOCKED)
+	•	Module 13 is the only authoritative registry for crafting ingredients.
+	•	Other systems may:
+	•	Reference ingredients by name only
+	•	Never redefine, duplicate, or alter them
+	•	If a conflict exists:
+	•	Module 13 overrides all other references
+
+⸻
+
+2. Vendor Basic Crafting Resources
+
+(Common Stock Registry)
+
+This section defines default vendor-available crafting inputs.
+
+Registry Rules
+	•	All listed items are Common-grade vendor stock by default
+	•	Vendor availability is strictly limited to listed items
+	•	Items are inputs only
+	•	No crafting outcomes are implied
+	•	Tools are:
+	•	Assumed to exist
+	•	Explicitly excluded from this registry
+
+⸻
+
+3. Vendor Stock by Profession
+
+Smith
+	•	Coal
+	•	Flux
+	•	Basic Hardware
+	•	Resin Glue
+
+⸻
+
+Tailor
+	•	Thread
+	•	Leather Strips
+	•	Basic Hardware
+	•	Resin Glue
+
+⸻
+
+Jeweler
+	•	Polishing Compound
+	•	Wire
+	•	Resin Glue
+	•	Basic Blanks
+
+⸻
+
+Alchemist
+	•	Empty Vial
+	•	Catalyst
+	•	Coal
+	•	Sulphur
+	•	Water Flask
+	•	Resin Glue
+
+⸻
+
+Cook
+	•	Salt
+	•	Cooking Oil
+	•	Butter
+	•	Seasonings
+	•	Water Flask
+
+⸻
+
+Scribe
+	•	Blank Parchment
+	•	Common Ink
+	•	Resin Glue
+	•	Patents
+
+⸻
+
+Laborer
+	•	None
+
+⸻
+
+Tamer
+	•	None
+
+⸻
+
+4. Cross-Profession Vendor Items
+
+(Reference Only)
+
+The following items may appear across multiple professions but remain governed by this module:
+	•	Coal
+	•	Resin Glue
+	•	Water Flask
+	•	Basic Hardware
+
+⸻
+
+Status
+	•	Authoritative
+	•	Structural
+	•	Non-balance
+	•	Non-outcome defining
+
 </section>
 
 <section id="module-14">
