--- a/talvaren-vault.html
+++ b/talvaren-vault.html
@@ -426,7 +426,128 @@ Status Summary
 
 <section id="module-12">
   <h2>Module 12 — Progression, XP & Caps</h2>
-  <p></p>
+  ✅ MODULE 12 — Progression, XP & Caps (CORRECTED)
+
+Ability Grant Milestones — FINALIZED (AUTHORITATIVE VIA MODULE 6)
+	•	Ability grants occur at Effective Levels:
+	•	Level 11
+	•	Level 21
+	•	Level 31
+	•	Level 41
+	•	Level 51
+	•	Level 61
+	•	Level 61 abilities are:
+	•	Intentionally high-impact
+	•	Identity-defining
+	•	Not numerical scaling rewards
+
+Ability totals, per-level grants, and caps are defined in Module 6 and referenced here for progression context only.
+
+This replaces the earlier 11/22/33/44/55 pattern.
+
+⸻
+
+Dual-Class On-Ramp Clarification
+	•	Secondary class always enters at the next Effective Level
+	•	This intentionally skips Level 1 of the secondary class
+	•	This ensures dual-class characters:
+	•	Are never ability-starved
+	•	Immediately gain access to new class tools
+
+Fully consistent and aligned with Module 6 effective-level math.
+
+⸻
+
+Progression Structure (world scale)
+	•	Zone clusters span 20–25 levels
+	•	Distribution rule:
+	•	1× level 60 → 3× level 50 zones
+	•	1× level 50 → 3× level 40 zones
+	•	Entire game playable via underground alone
+	•	Ocean progression is lateral only
+	•	No endgame region exists
+	•	Polar continents exceed standard world cap
+
+⸻
+
+Reward Law (progression link)
+	•	Permanent one-time biome stat gain encounters exist (see Module 4)
+	•	Zone-relative danger scaling (not player-level based)
+
+⸻
+
+Vendor crafting limit (scope note)
+	•	Profession vendors sell Common-grade basic resources only
+	•	Inventory limited strictly to Module 13 registry
+	•	Laborer and Tamer vendors sell none
+
+⸻
+
+LEVEL PROGRESSION — GLOBAL RULES
+	•	Maximum level: 61
+	•	No PvP exists in Talvaren. Ever.
+	•	Difficulty, tension, and mastery come exclusively from the world and its systems
+	•	Player choice is prioritized over optimization enforcement
+
+⸻
+
+ABILITY UNLOCK TIMING — HARD (REFERENCE ONLY)
+	•	Ability pacing, totals, and caps are defined in Module 6
+	•	This module governs when choices occur, not how many abilities exist
+
+Any numeric ability counts listed below are contextual milestones and must not override Module 6.
+
+⸻
+
+PRIMARY CLASS RULE — ADVENTURERS
+	•	A player’s first class choice is permanent and is their Primary Class
+	•	Primary Class defines identity and early training forever
+
+By Level 10:
+	•	Adventurers receive 8 class-defining abilities from their Primary Class
+	•	These form the irreversible core of the character
+
+⸻
+
+LEVEL 10 HARD CHOICE — ADVENTURERS
+
+At Level 10, Adventurers face a mandatory, blocking choice:
+	•	The choice window does not expire
+	•	Progression halts until a decision is made
+	•	Combat state does not bypass the choice
+
+Choices:
+	1.	Continue leveling the Primary Class
+	2.	Dual-class into any other available class
+
+⸻
+
+DUAL-CLASSING RULES — ADVENTURERS (HARD)
+	•	Dual-classing occurs in fixed 10-level blocks
+	•	Players are locked into their class choice for the next 10 levels
+	•	At the end of each 10-level block, the player chooses again
+	•	Choices are always between the two classes they already have
+	•	Partial splits do not exist:
+	•	No level 13 / level 7 characters
+	•	Progression is always in clean 10-level increments
+
+⸻
+
+Ability Structure & Progression Law (REFERENCE)
+	•	Ability taxonomy:
+	•	Spells
+	•	Activated abilities
+	•	Skills
+	•	Passives
+	•	Total ability counts, rotation structure, montage rules, and caps are defined in Module 6
+	•	Module 12 governs progression flow, not ability math
+
+⸻
+
+No PvP Rule
+
+Talvaren has no PvP.
+This is permanent and absolute.
 </section>
 
 <section id="module-13">
