--- a/talvaren-vault.html
+++ b/talvaren-vault.html
@@ -35,7 +35,527 @@ It serves as a read-only canonical reference source.
 <!-- ===================== -->
 <section id="world-lore-bible">
   <h2>World Lore Bible</h2>
-  <p><!-- Canon world lore goes here --></p>
+  World-lore-bible
+TALVAREN — LORE BIBLE (NON-MECHANICAL)
+
+“A mage does not tire in the legs first. They tire in the mind.”
+
+Optional short paragraph explaining that exertion for casters manifests as mental fatigue, mirroring stamina for physical classes.
+
+Nothing else from Tuesday needs to go here.
+
+Purpose
+This Lore Bible is a narrative, tonal, and continuity reference.
+It preserves voice, history, atmosphere, belief, contradiction, and developer-only truths.
+It is never used to decide mechanics.
+
+⸻
+
+Exertion (World Explanation)
+
+“A mage does not tire in the legs first. They tire in the mind.”
+
+In Talvaren, all action is exertion.
+
+Steel taxes the body.
+Magic taxes the will.
+
+Running, casting, fighting — all draw from the same truth:
+
+You cannot act without cost.
+
+A warrior loses breath.
+A rogue loses focus.
+A mage loses coherence.
+
+Those who sprint thoughtlessly arrive faster —
+and arrive empty.
+
+⸻
+
+Casting & Movement (In-World Framing)
+
+“Running while holding a spell together is harder than standing still.”
+
+“You can move, or you can focus. Those who master both earn it.”
+
+Instant spells are not faster spells —
+they are spells that no longer require attention.
+
+⸻
+
+Resource Scarcity (World Tone)
+
+“Power isn’t gone. You just spent it.”
+
+“If it came back on its own, it wouldn’t be worth carrying.”
+
+“Preparation is cheaper than panic.”
+
+
+CORE THEMES & PHILOSOPHY
+
+Talvaren is a living world governed by intentional friction, deliberate scarcity, and player-driven consequence. Convenience is rejected as default; systems reinforce identity, choice, and responsibility.
+
+Empathy is not forgiveness — it is understanding before judgment.
+
+Systems are discovered, not announced, except where explicitly permitted. World unlocks may be announced, but faction behavior, hazards, and consequences are learned through interaction, rumor, and experience.
+
+There are no invisible walls. Access is blocked only by natural world conditions: patrol density, megafauna, ambient danger, weather, and migration hazards. Danger is biological, not artificial.
+
+Size, race, and physicality matter. Monstrous beings are not scaled humans; they experience the world differently, socially and materially.
+
+Literacy is not assumed.
+
+Talvaren enforces boundaries through systems, not morality. Compassion does not equal access. A person may retain care and goodwill while permanently withdrawing structural trust.
+
+Growth does not require erasure of darkness. Redemption exists without purity. Growth is the disciplined choice to act with compassion through imperfection.
+
+Suffering, silence, and even trauma may become apertures rather than damage.
+
+The gravest human error is believing one’s own way is the universal standard.
+
+Talvaren does not eliminate ingenuity. It prevents scalable, low-effort value extraction. Clever play is welcomed. Exploits are neutralized by cost, friction, and consequence — not walls.
+
+Players may test the seams. They will find doors that open into effort, not shortcuts.
+
+⸻
+
+COSMOLOGY & METAPHYSICAL FRAME (NARRATIVE)
+
+The Mandala exists as a cosmic pattern expressed through reality, belief, and consequence.
+
+Prime Deities are not abstractions. They are forces with memory, preference, and contradiction.
+
+Lesser Immortals subdivide divine intent, reflecting themes, duties, and compulsions rather than personalities.
+
+Chaos and structure are collaborators, not opposites.
+
+Cletus uniquely embodies both chaos and stability through labor and craft.
+
+⸻
+
+WORLD HISTORY & AGES (NARRATIVE RECORD)
+
+PUBLIC RECORD — THE SEVEN AGES
+
+AGE 2 — THE AGE OF DRAGONKIN
+The greatest saturation of raw mana in world history. Dragonkin civilizations thrived. A forbidden resurrection ritual birthed the Nullbrand Revenant. Dragonkind enacted a sacrificial binding. Roughly one hundred dragons survived. Scholars believe this was the First Age.
+
+AGE 3 — THE AGE OF PROSPERITY
+A golden age of peace, expansion, and cultural development. Reckless experimentation awakened the Arachni.
+
+AGE 4 — THE AGE OF SUBJUGATION
+The Arachni claimed divine supremacy. Their dominion ended when they attempted to slay Vallinoraxistup. What followed was not a war. It was a reprimand.
+
+AGE 5 — THE AGE OF THE LIVING DEAD
+Death itself was altered. Undeath spread. Holy Purges followed. Death was damaged, not broken.
+
+AGE 6 — THE AGE OF ACCORD & INSTITUTIONS
+Mortals entered lawful negotiation with the Fey. Institutions replaced fear.
+
+AGE 7 — THE AGE OF QUIET BALANCE
+An era of apparent stability. Empires rise and fall within bounds. True Uniques stir. The world is already changing.
+
+⸻
+
+RUMORS, CONTRADICTIONS & PROPHECY
+
+The Age of Promise is referenced only through prophecy, Fey oral tradition, draconic memory, and contradiction.
+
+Three events are whispered:
+• The return of the Nullbrand Revenant
+• The destruction of Vallinoraxistup
+• The sacrifice of Queen Mab
+
+None are inevitable.
+None are preventable.
+
+The Fey remember.
+
+⸻
+
+DEVELOPER-ONLY — TRUE HISTORY
+
+AGE 1 — THE FORBIDDEN AGE
+
+A time of primordial tyranny when a single Divinity ruled Talvaren as a plaything. That Divinity was shattered into eight fragments.
+
+No mortal knows this age existed.
+
+Only three surviving dragons and The Fox know the world’s timeline is miscounted.
+
+The world is in the True Seventh Age.
+
+⸻
+
+FACTIONS, CULTURES & POWERS
+
+THE DEEP DELVERS
+
+Alignment: Dangerously agnostic
+
+Subterranean. Negotiation-optimized. Double-dealing by nature. Biologically durable. Socially treacherous.
+
+They operate multi-level cavern markets with shifting tunnels.
+
+All races are welcome with coin. Immediate ambush follows beyond neutral borders.
+
+They function as a world black market, lore nexus, and appraisal authority.
+
+Deep Delvers uniquely smell True Uniques.
+
+⸻
+
+THE FOX — PUBLIC BELIEF
+
+A flamboyant traveling merchant and information-dealer who appears in the strangest places at the strangest times.
+
+Trades in rumors, curiosities, and influence.
+
+Loved by some, distrusted by many, underestimated by almost everyone.
+
+NPC accounts contradict each other constantly — by design.
+
+DEVELOPER-ONLY — GAME LAW (NON-PLAYER)
+
+The Fox sells cosmetic and flavor items only.
+The Fox is killable… technically.
+
+If The Fox dies, the last mortal link to the truth of the Ages is lost.
+
+⸻
+
+NPC ARCHETYPES & VOICE
+
+NPCs are bureaucratic, knowledgeable, and indifferent to urgency.
+
+“You should’ve thought ahead.”
+“No, you can’t just hop on. That’s why there are forms.”
+“No forms, no passage.”
+“That post’s a mile back.”
+
+IDENTIFIERS
+
+Each Identifier has:
+• Race
+• Quirk
+• Biome tie
+• Signature behavior
+
+Example:
+Marwa, the Bog Lantern — Marshlands
+Cruel humor; refuses clean objects.
+
+“If it ain’t makin’ a noise or drippin’, it ain’t worth lookin’ at.”
+
+⸻
+
+WORLD FEEL & ENVIRONMENTAL LOGIC
+
+World events are unannounced.
+
+They manifest through patrol migrations, fungal blooms, beast drift, lightning surges, necrotic pressure, weather, and seasonal hazards.
+
+Change occurs silently.
+
+There are no patch notes for reality.
+
+Safe Zones are not invulnerability fields.
+They are permissions.
+
+Light is never free.
+
+⸻
+
+ITEMS, OBJECTS & EVERYDAY REALITY (FLAVOR)
+
+FIELD KIT — CANONICAL FLAVOR TEXT
+
+A battered collection of essentials gathered from a lifetime on the road.
+Rope. Chalk. A monocle that definitely isn’t yours.
+A mining pick, a needle, a pan, a quill — and somehow never the one thing you actually need.
+
+⸻
+
+UNIFIED VENDOR ITEM FLAVOR TEXT — LOCKED
+(Stored verbatim exactly as provided.)
+
+⸻
+
+SCROLLS & WRITS — NARRATIVE FRAMING
+
+Scrolls are emergency tools, not identity.
+
+“Yes, this was created by a bureaucrat.
+No, you can’t cut in line.”
+
+“If wizards could think a spell, there would be no more wizards over the age of five.”
+
+Writs are bureaucratic instruments.
+They formalize action.
+They do not grant forgiveness.
+
+⸻
+
+ADDITIONAL CONSOLIDATED LORE REFERENCES
+
+The Vast Below
+A shadow-continent beneath Talvaren, mirroring surface biomes in distorted, hostile forms. Deep Delver cities and markets thrive within. Hazards are shaped by darkness, pressure, and distortion. Shadow Dragon Vallinoraxistup presides.
+
+The Seven Ages — Extended Record
+Age 8 — The Age of Promise (Foreshadowing Only): begins with collapse of Fey Accords. Associated (not inevitable) events include the return of the Nullbrand Revenant, the death of Vallinoraxistup, and the sacrifice of Queen Mab. Fulfillment of bargains. Fey become inheritors.
+
+Powdered Crystal (PC) — Lore Properties
+Highest-order currency. Monetary value first. Does not glow on land or freshwater; glows only in saltwater, scaling with depth and salinity. Required by sub-aquatic civilizations for infrastructure stability, magical currents, and pressure wards. Hoarding underwater is dangerous; circulation is mandatory. Measured by mass, not coins. Refined from fragments. Not used directly in crafting.
+
+Artifacts — Civilization Flavor
+Non-functional treasures originating from five ancient mortal civilizations. Decorative only; used for housing, guild halls, and business decoration. Valuable vendor items reinforcing profession interdependence and cultural treasure value loops.
+
+TALVAREN — FLAVOR TEXT ARCHIVE
+
+(Narrative & Atmospheric Reservoir — Non-Mechanical)
+
+Purpose
+This archive preserves narrative, atmospheric, dialogue, and flavor text exactly as written.
+It is a source pool for reuse.
+Nothing here is authoritative on mechanics or systems.
+
+⸻
+
+ITEM FLAVOR TEXT
+
+FIELD KIT — CANONICAL FLAVOR TEXT
+
+A battered collection of essentials gathered from a lifetime on the road.
+Rope. Chalk. A monocle that definitely isn’t yours.
+A mining pick, a needle, a pan, a quill — and somehow never the one thing you actually need.
+
+⸻
+
+UNIFIED VENDOR ITEM FLAVOR TEXT — LOCKED
+
+Coal
+Black, dusty, and reliably flammable. It does exactly what coal has always done.
+
+Resin Glue
+Sticky, slow to cure, and hard to get off your fingers. Holds most things together. Usually.
+
+Water Flask
+Clean water in a sealed container. You’ll need more than you think.
+
+Basic Hardware
+Nails, pins, fasteners, and other small bits that vanish the moment you look away.
+
+Flux
+A necessary annoyance. Things melt better when this is involved.
+
+Thread
+Strong enough to hold. Thin enough to break at the worst possible moment.
+
+Leather Strips
+Trimmed, flexible pieces ready for stitching, binding, or patching.
+
+Polishing Compound
+A fine abrasive paste. Makes dull things shine and shiny things visible.
+
+Wire
+Thin, flexible metal wire for shaping, binding, and delicate work.
+
+Basic Blanks
+Unworked forms cut to standard sizes — rings, bands, and pendants waiting to become something more valuable than the metal they’re made from.
+
+Empty Vial
+Clean, sealed, and fragile. Try not to drop it.
+
+Catalyst
+Encourages reactions to happen faster, louder, or at all.
+
+Sulphur
+Yellow, sharp-smelling, and best handled carefully.
+
+Salt
+Improves flavor. Preserves food. Ruins meals when overused.
+
+Cooking Oil
+Keeps food from sticking. Sometimes keeps cooks from burning things.
+
+Butter
+Adds richness, calories, and regret.
+
+Seasonings
+A mixed pouch of dried herbs and spices. Exact contents vary.
+
+Blank Parchment
+Prepared sheets ready to receive words, marks, or mistakes.
+
+Common Ink
+Dark, dependable, and slow to fade.
+
+Patents
+Stamped documents recognizing ownership, authorship, or official intent.
+
+⸻
+
+NPC DIALOGUE & VOICE POOLS
+
+CARAVAN / BUREAUCRATIC NPC LINES
+
+“You should’ve thought ahead.”
+“No, you can’t just hop on. That’s why there are forms.”
+“No forms, no passage. That’s how this works.”
+“You want the other road? That post’s a mile back.”
+
+⸻
+
+ARTIFACT SPECIALIST — DIALOGUE
+
+Payment Taken (One Line Spoken):
+
+“Oh-ho! This will do nicely.”
+“Don’t mind if I do — I’ve always wanted one of these!”
+“Aaaand… my fee. You won’t be needing that, surely!”
+“Excellent! A fine specimen. Payment accepted.”
+“A curious trinket… I’ll take it off your hands.”
+“Yes, yes, yes… this one is MINE now.”
+“A fair price, wouldn’t you say? Too late if not!”
+“Wonderful! My collection grows again.”
+“You brought four? You’re generous! I only need one…”
+“Let me just… yoink. That one belongs to me now.”
+
+After Identification:
+
+“All right, let’s see what secrets these baubles hold.”
+“Aha! Very interesting… here is what you actually have.”
+“You’ve been carrying THIS around? Fascinating.”
+“Revealed! Try not to faint.”
+“All done. Do try not to break them before selling.”
+
+⸻
+
+IDENTIFIER NPC — PERSONALITY SAMPLE
+
+Marwa, the Bog Lantern — Marshlands
+Cruel humor. Refuses clean objects.
+
+“If it ain’t makin’ a noise or drippin’, it ain’t worth lookin’ at.”
+
+⸻
+
+SCROLLS, WRITS & BUREAUCRACY (FLAVOR ONLY)
+
+“Yes, this was created by a bureaucrat.
+No, you can’t cut in line.”
+
+“If wizards could think a spell, there would be no more wizards over the age of five.”
+
+“This document certifies that the attached spell was cast properly, lawfully, and without incident. Any attempt to reproduce said spell without authorization will be met with fines, audits, or worse… you get to wait in line at the House of Authority for peer review.”
+
+⸻
+
+ATMOSPHERIC & WORLD TONE TEXT
+
+Through careful pressure and practiced restraint, the Jeweler reduces excess crystal to its purest workable form. What is lost in mass is gained in precision.
+
+Capitals favor specific cultures. Treasure complements the crafting economy. Every dangerous expedition yields at least one meaningful reward.
+
+Aggro in Talvaren is biological, not numeric. Noise, movement, visibility, and threat define targeting. Some entities override this logic entirely.
+
+Safe Zones are not invulnerability fields. They are permissions.
+
+Only specific professions create infinite safe zones. Others provide ambient warmth or light.
+
+Light is a tactical and exploration resource.
+Light is never free.
+
+⸻
+
+RUMORS, CONTRADICTIONS & CHARACTER MYTH
+
+NPCs contradict each other constantly — and that’s exactly how he likes it.
+
+“He once convinced a duke to buy his own castle back.”
+“He smuggles dragon eggs.”
+“He knows when artifacts will surface before the earth does.”
+“He owns half the Shadow Consortium.”
+“He is the Shadow Consortium.”
+“He is banned from twelve nations but still visits them weekly.”
+“He has no magical power — just a dangerous mind.”
+“He’s older than he looks.”
+“He’s younger than he looks.”
+“He can talk his way out of death.”
+
+⸻
+
+SIGNATURE QUOTES
+
+“If you think I’m harmless, congratulations — you’re already losing.”
+“People don’t fear the truth. They fear finding out they were wrong.”
+“History is a story told by survivors. I prefer the version told by witnesses.”
+“The Eighth Age? Oh, darling… that’s centuries away.”
+“I never lie. I simply… curate the truth.”
+“Kings rule nations. I rule outcomes.”
+“Dragons forget. I don’t have that luxury.”
+
+⸻
+
+WORLD & ECOSYSTEM FEEL (FLAVOR)
+
+Fauna are passive unless provoked.
+Apex predators are critical to ecosystem balance.
+Fodder creatures shift locations to maintain population pressure.
+Dangerous regions naturally produce better rewards.
+
+⸻
+
+THE VAST BELOW — FLAVOR
+
+Three underground layers with decreasing safety.
+Rare sightlines to the surface from upper reaches.
+Verticality conveyed through sound and visual cues.
+Few tunnels connect layers to preserve danger and mystery.
+
+⸻
+
+WORLD EVENTS — EMERGENT FEEL
+
+Patrol migrations reshape encounters.
+Fungal blooms create temporary harvesting opportunities.
+Fey activity alters zones subtly.
+Necrotic pressure changes undead regions.
+Seasonal storms affect travel, visibility, and gathering.
+Dryad stand-downs respond to reputation.
+
+No announcements.
+Players discover changes organically.
+
+⸻
+
+NPC CHARACTERIZATION — FLAVOR
+
+The Fox: roaming merchant, dangerous to engage, impossible to fully understand.
+Identification NPCs are the only source of item truth.
+Marwa exemplifies biome-specific personality.
+Vallinoraxistup looms over Deep Delver access.
+Deep Delver Society is subterranean, agnostic, treacherous, and negotiation-driven.
+
+⸻
+
+PLAYER PHILOSOPHY (FLAVOR)
+
+Exploration and observation are rewarded.
+Progression is never forced.
+The world reacts but does not explain itself.
+Danger is respected, not trivialized.
+PROFESSIONAL DESIGN INTENT
+	•	Not every player wants to grind dungeons.
+	•	This system allows:
+	•	Combat Alchemists
+	•	Battle Cooks
+	•	Front-line Jewelers
+	•	Professional identity is preserved without forcing combat or crafting supremacy.
+	•	Choice creates diversity without homogenization.
+
 </section>
 
 <!-- ===================== -->
