--- a/talvaren-vault.html
+++ b/talvaren-vault.html
@@ -3317,6 +3317,40 @@ HOLDING SUMMARY
 	•	Design doctrine
 	•	Nothing here is implied, enforced, or implemented
 </section>
+<!-- ========================= -->
+<!-- PLAYER-FACING GUIDE -->
+<!-- ========================= -->
+<section id="player-guide">
+  <h2>Talvaren — Player Guide (Non-Authoritative)</h2>
+  <p>
+    This document explains how to exist within Talvaren as a player.
+    It describes expectations, friction, preparation, danger, and consequence.
+    It does not define mechanics, numbers, or optimal play.
+  </p>
+</section>
 
+<!-- ========================= -->
+<!-- DEVELOPER-FACING GUIDE -->
+<!-- ========================= -->
+<section id="developer-guide">
+  <h2>Talvaren — Developer Guide (Implementation Notes)</h2>
+  <p>
+    This document preserves design intent, implementation priorities,
+    and cross-module dependency warnings.
+    It introduces no rules and overrides nothing.
+  </p>
+</section>
+
+<!-- ========================= -->
+<!-- MANIFESTO -->
+<!-- ========================= -->
+<section id="manifesto">
+  <h2>Talvaren — Manifesto</h2>
+  <p>
+    This document explains why Talvaren exists.
+    It is philosophical, directional, and persuasive only.
+    It contains no mechanics, promises, or implementation details.
+  </p>
+</section>
 </body>
 </html>
