--- a/talvaren-vault.html
+++ b/talvaren-vault.html
@@ -29,7 +29,31 @@
 This page is intentionally unlinked and unindexed.<br>
 It serves as a read-only canonical reference source.
 </p>
+<section id="directory">
+<h2>Directory — Module & Storage Structure Quick Reference</h2>
 
+Module 1A — Player Core Systems
+Module 1B — Equipment & Gear Systems
+Module 2 — World Engine & Global Systems
+Module 3 — Guild Infrastructure, Maps, Travel, Identification & Hub Logic
+Module 4 — World Geography & Biomes
+Module 5 — Mandala Damage, Divine Systems & Probability
+Module 6 — Professional Classes, Crafting & Shared Systems
+Module 7 — Non-Magic Abilities & Skills (reserved / not yet populated)
+Module 8 — Damage Types & Mandala Integration (superseded by Module 5, retained for indexing)
+Module 9 — NPC & AI Behavior
+Module 10 — Professions (Scribe, Crafting) (merged into Module 6; retained for archival reference)
+Module 11 — Economy & Vendors (merged into Module 6; retained for archival reference)
+Module 12 — Progression, XP & Caps
+Module 13 — Materials, Resources & Reagents
+Module 14 — Governance, Enforcement & Appeals
+World-Lore-Bible
+Tables-Temp
+Registries-Temp
+Patches-Temp
+Holding-Temp
+
+</section>
 <!-- ===================== -->
 <!-- WORLD LORE -->
 <!-- ===================== -->
