--- a/talvaren-vault.html
+++ b/talvaren-vault.html
@@ -587,23 +587,69 @@ PROFESSIONAL DESIGN INTENT
 <!-- ===================== -->
 <section id="module-1a">
   <h2>Module 1A — Player Core Systems</h2>
-  MODULE 1A — Player Core Systems
+  MODULE 1A — PLAYER CORE SYSTEMS
 
-Purpose
+⸻
+
+PURPOSE
 
 Rules that apply to all players, regardless of class.
 
 ⸻
 
-1. Player Resources
-	•	Health (HP) is not a spendable resource.
-	•	Mana and Stamina are the only spendable resources.
-	•	A character’s Primary Class determines which resource all abilities use.
-	•	Movement actions may consume the primary resource.
+SECTION 1 — PLAYER HOUSING SYSTEMS
+
+True-Unique Deeds
+	•	8 player housing deeds
+	•	1 guild hall deed
+	•	8 professional deeds
+
+Drop Rules
+	•	1 in 3000 chance
+	•	Any humanoid, non-fauna mob
+	•	Locations determined later
+
+Housing Communities
+	•	Adjacent to a hub
+	•	Limited number of houses
+	•	Zone-appropriate architecture
+
+Each community contains:
+	•	Graveyard
+	•	Soul well
+	•	Centralized gathering area
+
+Gathering Area Includes
+	•	Long tables
+	•	Stage
+	•	Decorations
+	•	1–3 NPC musicians
+
+All holiday events occur here and are Shade-run.
 
 ⸻
 
-2. Resource Bar Structure
+SECTION 2 — PLAYER RESOURCES
+
+Primary Resources
+	•	Health (HP) is not a spendable resource
+	•	Mana and Stamina are the only spendable resources
+	•	A character’s Primary Class determines which resource all abilities use
+	•	Movement actions may consume the primary resource
+
+Primary Resource Law
+	•	HP is a life resource only
+	•	No ability ever costs HP
+	•	HP loss occurs only through damage or world consequences
+
+There are:
+	•	No mixed-cost abilities
+	•	No dual-resource abilities
+	•	No exceptions
+
+⸻
+
+SECTION 3 — RESOURCE BAR STRUCTURE
 
 Each spendable resource uses a Two-Bar System:
 	•	Active Resource Bar
@@ -613,16 +659,51 @@ Rules:
 	•	Resource expenditure draws from Reserve first
 	•	No passive regeneration of Active or Reserve Bars
 	•	Magical healing cannot restore the Reserve Bar
-	•	Reserve refills only via:
+
+Reserve refills only via:
 	•	Consumables
 	•	Safe Zones
 
 When Reserve is empty → Cracked State
-	•	Cracked resources cannot refill until Safe Zone access or consumable use.
+	•	Cracked resources cannot refill until Safe Zone access or consumable use
 
 ⸻
 
-3. Casting & Movement
+SECTION 4 — RESOURCE REGENERATION RULES
+
+Primary Resource Regeneration
+
+Primary resources (Mana, Stamina) do not regenerate naturally.
+
+There is:
+	•	No passive regeneration
+	•	No out-of-combat regeneration
+	•	No stat-based regeneration
+	•	No class-based regeneration
+
+Resources are restored only via:
+	•	Consumables
+	•	Safe Zones
+
+Status: ACTIVE — Unlocked for evaluation
+
+Reserve Bar Regeneration
+
+Status: OPEN DESIGN NOTE
+	•	A very slow Reserve regeneration may be allowed in the future
+	•	Not decided
+	•	Not implemented
+	•	Not implied
+
+If allowed:
+	•	Would be extremely slow
+	•	Would never replace consumables
+	•	Would never operate in combat
+	•	Exists only to reduce hard-dead expedition states
+
+⸻
+
+SECTION 5 — CASTING & MOVEMENT
 	•	Cast Time = 0 → Instant Cast
 	•	All Instant Cast abilities may be used while moving
 	•	Any Cast Time greater than 0 requires stationary casting
@@ -633,7 +714,7 @@ Status: STRUCTURAL — Pending Final Reconfirmation
 
 ⸻
 
-4. Universal Buff Rules
+SECTION 6 — UNIVERSAL BUFF RULES
 	•	Weak Buff → +15%
 	•	Strong Buff → +45%
 
@@ -646,7 +727,9 @@ Rules:
 
 ⸻
 
-5. Mechanical Damage Types
+SECTION 7 — DAMAGE SYSTEMS
+
+Mechanical Damage Types
 
 Talvaren uses exactly four (4) mechanical damage types:
 	•	Physical
@@ -656,9 +739,7 @@ Talvaren uses exactly four (4) mechanical damage types:
 
 All Mandala / elemental terms (Light, Fire, Ice, etc.) are flavor only and have no mechanical damage, resistance, or weakness math.
 
-⸻
-
-6. Damage Magnitude Placeholders
+Damage Magnitude Placeholders
 
 Each mechanical damage type uses four magnitude tiers:
 	•	Weak
@@ -673,9 +754,7 @@ Rules:
 	•	No sub-tiers
 	•	Same magnitude = same budget everywhere
 
-⸻
-
-7. Mental Damage Special Rule
+Mental Damage Special Rule
 
 Mental damage is effect-first, not damage-first.
 	•	Deals minimal or zero HP damage
@@ -694,41 +773,7 @@ Mental effects still obey:
 
 ⸻
 
-8. Primary Resource Regeneration
-
-Primary resources (Mana, Stamina) do not regenerate naturally.
-
-There is:
-	•	No passive regeneration
-	•	No out-of-combat regeneration
-	•	No stat-based regeneration
-	•	No class-based regeneration
-
-Resources are restored only via:
-	•	Consumables
-	•	Safe Zones
-
-Status: ACTIVE — Unlocked for evaluation
-
-⸻
-
-9. Reserve Bar Regeneration
-
-Status: OPEN DESIGN NOTE
-	•	A very slow Reserve regeneration may be allowed in the future
-	•	Not decided
-	•	Not implemented
-	•	Not implied
-
-If allowed:
-	•	Would be extremely slow
-	•	Would never replace consumables
-	•	Would never operate in combat
-	•	Exists only to reduce hard-dead expedition states
-
-⸻
-
-10. Sprint & Movement Authority
+SECTION 8 — SPRINT & MOVEMENT AUTHORITY
 	•	Sprint available at Level 1
 	•	Sprint is an exertive action
 	•	Sprint drains Active Stamina
@@ -744,33 +789,23 @@ Status: STRUCTURAL — Pending Stress Testing
 
 ⸻
 
-11. Dual-Class Rules
+SECTION 9 — DUAL-CLASS RULES
 	•	Maximum of two classes per character
-	•	Primary Class:
+
+Primary Class:
 	•	Defines resource type
 	•	Defines scaling model
-	•	Secondary Class:
+
+Secondary Class:
 	•	Grants abilities only
 
 All abilities use the Primary Resource.
 
 ⸻
 
-12. Primary Resource Law
-	•	HP is a life resource only
-	•	No ability ever costs HP
-	•	HP loss occurs only through damage or world consequences
+SECTION 10 — PRIMARY RESOURCE CLASS SPLIT (LOCKED)
 
-There are:
-	•	No mixed-cost abilities
-	•	No dual-resource abilities
-	•	No exceptions
-
-⸻
-
-13. Primary Resource Class Split (LOCKED)
-
-Mana-Primary Classes (8):
+Mana-Primary Classes (8)
 	•	Wizard
 	•	Necromancer
 	•	Druid
@@ -780,7 +815,7 @@ Mana-Primary Classes (8):
 	•	Tailor
 	•	Scribe
 
-Stamina-Primary Classes (8):
+Stamina-Primary Classes (8)
 	•	Warrior
 	•	Paladin
 	•	Executioner
@@ -794,22 +829,247 @@ All abilities — combat, utility, profession, and dual-class — consume the pr
 
 ⸻
 
-14. Core Stats & Progression Rules
-	•	Six primary stats: STR, CON, DEX, INT, WIS, ART
-	•	Beginning stats depend on size; “Average” begins at 8
-	•	Level 1:
-	•	+20 stat points
-	•	Size-based min/max apply (Level 1 only)
-	•	Post-Level 1:
-	•	+2 stat points per level
-	•	Max +1 per stat per level
-	•	No stat caps
+PRIMARY RESOURCE HD GROWTH COEFFICIENTS (PER CLASS)
 
-Attribute effects are per-point, not per-level.
+Definition
+Each class has three HD values: HP / Mana / Stamina.
+Total HD per class is always 40.
+HD is determined at character creation, permanent, and retroactive.
+Starting resource at Level 1 is HD × 10, then modified by stats.
+At every level after Level 1, maximum resource increases by +HD.
+
+HD Values by Class
+
+Warrior
+HP 18
+Mana 8
+Stamina 14
+
+Paladin
+HP 16
+Mana 12
+Stamina 12
+
+Executioner
+HP 14
+Mana 10
+Stamina 16
+
+Rogue
+HP 12
+Mana 12
+Stamina 16
+
+Priest
+HP 14
+Mana 12
+Stamina 14
+
+Druid
+HP 12
+Mana 16
+Stamina 12
+
+Wizard
+HP 14
+Mana 18
+Stamina 8
+
+Necromancer
+HP 12
+Mana 18
+Stamina 10
+
+Smith
+HP 18
+Mana 10
+Stamina 12
+
+Tailor
+HP 10
+Mana 14
+Stamina 16
+
+Jeweler
+HP 10
+Mana 16
+Stamina 14
+
+Alchemist
+HP 10
+Mana 16
+Stamina 14
+
+Cook
+HP 14
+Mana 10
+Stamina 16
+
+Scribe
+HP 8
+Mana 18
+Stamina 14
+
+Laborer
+HP 12
+Mana 10
+Stamina 18
+
+Tamer
+HP 14
+Mana 10
+Stamina 16
+
+HD Constraints (Authoritative)
+
+Highest HP: Warrior, Smith
+Lowest HP: Scribe
+
+Highest Mana: Wizard, Necromancer, Scribe
+Lowest Mana: Warrior
+
+Highest Stamina: Laborer
+Lowest Stamina: Wizard
 
 ⸻
 
-15. Attribute Effects (Per Point)
+PLAYER HEIGHT & SIZE CATEGORIES
+
+Minimum height: 1.0 m
+Maximum height: 2.7 m
+
+Tiny: 1.0–1.5 m
+Standard: 1.6–2.1 m
+Monstrous: 2.2–2.7 m
+
+Classes scale to player-selected height.
+Classes are not size-locked.
+
+⸻
+
+LEVEL-1 STAT FRAMEWORK (GLOBAL)
+
+Six primary stats: STR, CON, DEX, INT, WIS, ART.
+
+All Level-1 limits are creation-only constraints and do not cap long-term growth.
+
+Players receive 20 free stat points at Level 1.
+All stat points must be allocated at creation.
+
+⸻
+
+LEVEL-1 STAT FRAMEWORK — STANDARD SIZE
+
+Baseline:
+All stats start at 8.
+
+Maximums:
+No stat may exceed 15 at Level 1.
+
+⸻
+
+LEVEL-1 STAT FRAMEWORK — TINY SIZE
+
+Minimum stats:
+STR 4
+CON 4
+DEX 12
+INT 9
+WIS 10
+ART 9
+
+Maximum stats:
+STR 8
+CON 8
+DEX 16
+INT 15
+WIS 15
+ART 15
+
+⸻
+
+LEVEL-1 STAT FRAMEWORK — MONSTROUS SIZE
+
+Minimum stats:
+STR 12
+CON 12
+DEX 4
+INT 4
+WIS 8
+ART 8
+
+Maximum stats:
+STR 16
+CON 16
+
+STR and CON maximums are intentional traps.
+
+SECTION 11 — CORE STATS & PROGRESSION
+
+Primary Stats
+
+STR, CON, DEX, INT, WIS, ART are the six primary player stats.
+	•	A stat value of 8 represents the world average and confers no bonus or penalty
+	•	Values above 8 confer advantages
+	•	Values below 8 impose penalties
+	•	There are no stat caps
+	•	Stats may increase indefinitely over a character’s lifetime
+
+Level 1 Stat Allocation
+	•	Players receive 20 stat points
+	•	Beginning stats depend on size
+	•	Size-based min/max apply (Level 1 only)
+
+Post-Level-1 Stat Allocation
+	•	+2 stat points per level
+	•	All stat points must be spent immediately
+	•	Each allocation event limited to +1 per stat
+
+Loot-granted stat points:
+	•	Bypass level-based limits
+	•	Still obey the +1 per stat per allocation rule
+
+Attribute effects are per-point, not per-level.
+Stat bonuses apply retroactively to all levels, including Level 1.
+
+⸻
+
+SECTION 12 — LITERACY & UI GATES
+	•	INT ≤ 10 → Cannot read
+	•	INT ≥ 11 → Literacy enabled
+	•	WIS < 11 → Compass disabled
+	•	Symbol-based signage still functions
+
+Size does not hard-block literacy or compass access, but size-based stat pressure may discourage reaching thresholds early.
+
+⸻
+
+SECTION 13 — PRIMARY RESOURCES & HD
+
+Primary resources are:
+	•	HP
+	•	Mana
+	•	Stamina
+
+Each primary resource is governed by a class-defined HD growth coefficient.
+
+HD is:
+	•	Determined at character creation
+	•	Permanent once play begins
+	•	A growth coefficient, not a temporary modifier
+
+Starting resource at Level 1:
+	•	HD × 10
+	•	Then modified by player stat allocation
+
+At every level after Level 1:
+	•	Resource maximum increases by +HD
+
+Stat-based modifiers apply retroactively, including Level 1.
+
+⸻
+
+SECTION 14 — ATTRIBUTE EFFECTS (PER POINT)
 	•	STR → Stamina Max
 	•	WIS → Mana Max
 	•	ART → Stamina efficiency + Stamina Max
@@ -819,7 +1079,69 @@ Attribute effects are per-point, not per-level.
 
 ⸻
 
-16. Safe Zones
+SECTION 15 — NUMERIC STAT MECHANICS
+
+Strength (STR)
+
+STR governs physical damage, stamina growth, and carry capacity.
+
+Damage
+	•	STR 4: −2 damage per attack
+	•	STR 6: −1 damage per attack
+	•	STR 8: no modifier
+	•	STR 10: +1 damage
+	•	Every +2 STR above 10: +1 damage
+	•	No cap
+
+Stamina per Level (HD-gated, retroactive)
+	•	STR 4: −2 stamina per level
+	•	STR 6: −1 stamina per level
+	•	STR 8: no modifier
+	•	STR 10: +1 stamina per level
+	•	Every +2 STR above 10: +1 stamina per level
+
+Carry Capacity
+	•	+2 kg per STR point
+
+STR damage applies to all player physical attacks.
+World or mob traps are exempt from STR rules.
+
+Constitution (CON)
+
+CON follows the same numeric scaling pattern as STR but applies to HP per level.
+
+Wisdom (WIS)
+
+WIS follows the same numeric scaling pattern as STR but applies to Mana per level.
+
+Dexterity (DEX)
+
+DEX governs movement speed, incoming melee damage taken, and dual wielding.
+
+Movement Speed
+	•	DEX 4: −5%
+	•	DEX 6: −2.5%
+	•	DEX 8: no modifier
+	•	DEX 10: +3%
+	•	Every +3 DEX above 10: +3%
+
+Incoming Melee Damage Taken
+	•	DEX 4: +5%
+	•	DEX 6: +2.5%
+	•	DEX 8: no modifier
+
+Dual Wielding
+	•	At DEX 11, the player may dual wield an off-hand weapon weighing 2 kg or less
+	•	Off-hand attacks apply to auto attacks only, not abilities
+	•	Off-hand attack speed at DEX 11 is 1 attack every 3 seconds
+	•	Each DEX above 11 reduces off-hand attack interval by 0.1 seconds
+	•	Off-hand attack speed is hard-capped by the primary-hand weapon’s maximum attack speed
+
+No skills, gear, buffs, or systems other than DEX may ever modify off-hand attack speed.
+
+⸻
+
+SECTION 16 — SAFE ZONES
 	•	Allow recovery and logistical action
 	•	Do not prevent consequences
 
@@ -830,22 +1152,15 @@ Aggro rules:
 
 ⸻
 
-17. Literacy & UI Gates
-	•	INT ≤ 10 → Cannot read
-	•	INT ≥ 11 → Literacy enabled
-	•	WIS < 11 → Compass disabled
-	•	Symbol-based signage still functions
-
-⸻
-
-18. Scrolls & Writs
+SECTION 17 — SCROLLS & WRITS
 
 Scrolls
 	•	Spell-adjacent, single-use items
 	•	Instant cast
 	•	Consume mana
 	•	Reference base spell only unless class-unlocked
-	•	Blocked while:
+
+Blocked while:
 	•	Silenced
 	•	Underwater
 	•	In storm biomes
@@ -861,25 +1176,28 @@ Rules:
 
 ⸻
 
-19. Death & Soul Logic
-	•	Spirit Wells:
+SECTION 18 — DEATH & SOUL LOGIC
+
+Spirit Wells provide:
 	•	Resurrection
 	•	Identification access
 	•	Map study
-	•	Graveyards
+
+Graveyards:
 	•	Two bindable respawn locations (primary + secondary)
 
 ⸻
 
-20. Field Kit (Universal Slot)
+SECTION 19 — FIELD KIT (UNIVERSAL SLOT)
 	•	All characters possess one Field Kit slot
 	•	Universal, class-agnostic
 	•	Not gear, inventory, or weapon
 	•	World-interaction utility only
 
 Field Pull System
-	•	Once per 3-hour in-game day:
-	•	Grants one random utility consumable
+
+Once per 3-hour in-game day:
+	•	Grants one random stackable utility consumable
 	•	Low quality
 	•	Single-use
 	•	Non-scaling
@@ -898,20 +1216,10 @@ Fishing Pole is the only equip-required tool unless patched.
 
 ⸻
 
-21. Encumbrance Authority Clarification
+SECTION 20 — ENCUMBRANCE AUTHORITY CLARIFICATION
 	•	Equipment defines weight
 	•	Player systems define consequences
-	•	No equipment module may define stamina regeneration or sprint rules
-
-⸻
-
-Status Summary
-	•	Locked: Primary Resource Class Split
-	•	Active (Unlocked): Resource Regeneration Rule
-	•	Open: Reserve Bar Regen
-	•	Structural / Pending: Casting & Sprint Interaction
-
-</section>
+	•	No equipment module may define stamina regeneration or sprint rules</section>
 
 <section id="module-1b">
   <h2>Module 1B — Equipment & Gear Systems</h2>
